--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,9 @@
-mediapipe==0.10.14
 numpy==1.26.4
+opencv-python==4.10.0.84
+mediapipe==0.10.14
+transformers==4.44.0
+tensorflow==2.17.0
+tf-keras==2.17.0
+torch==2.4.0
+torchaudio==2.4.0
+torchvision==0.19.0
